Import of LAMPRECHT/Tk-PerlMethodList-0.05 from CPAN.
gitpan-cpan-distribution: Tk-PerlMethodList
gitpan-cpan-version:      0.05
gitpan-cpan-path:         LAMPRECHT/Tk-PerlMethodList-0.05.tar.gz
gitpan-cpan-author:       LAMPRECHT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Tk-PerlMethodList
-version:      0.04
+version:      0.05
 version_from: lib/Tk/PerlMethodList.pm
 installdirs:  site
 requires:
+    B:                             1.01
+    B::Stash:                      1.00
     Class::ISA:                    0.33
     Devel::Peek:                   0.96
     File::Slurp:                   9999.08
@@ -13,4 +15,4 @@ requires:
     Tk::ROText:                    4.010
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30_01
