--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Tk-PerlMethodList
-version:      0.06
-version_from: lib/Tk/PerlMethodList.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Tk-PerlMethodList
+version:             0.07
+abstract:            query the Symbol-table for methods (subroutines) defined in a class (package) and its parents.
+license:             perl
+author:              
+    - Christoph Lamprecht <lamprecht@cpan.org>
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
     B:                             1.01
-    B::Stash:                      1.00
-    Class::ISA:                    0.33
+    Class::Inspector:              1.17
     Devel::Peek:                   0.96
     File::Slurp:                   9999.08
+    MRO::Compat:                   0.02
     Tk:                            8.4
     Tk::LabEntry:                  4.006
     Tk::NumEntry:                  2.06
     Tk::ROText:                    4.010
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
